# quicshell

./: .gitignore  Cargo.toml  README.md  roadmap.md  spec.md
.codacy/: codacy.yaml
.github/workflows/: build.yaml  ci_test.yaml
docs/: canonical_cbor.md  roadmap.md  spec.md
scripts/: cover.sh
src/: lib.rs
src/adapters/: mod.rs
src/adapters/crypto/: chacha20poly1305.rs  mod.rs  xchacha20poly1305.rs
src/adapters/inbound/: mod.rs
src/adapters/outbound/: mod.rs
src/adapters/outbound/crypto/: mod.rs
src/adapters/outbound/os/: mod.rs
src/adapters/outbound/storage/: mod.rs
src/adapters/outbound/transport/: mod.rs
src/app/: mod.rs
src/application/handshake/: errors.rs  fsm.rs  fsm_machine.rs  fsm_tests.rs  fsm_types.rs  mod.rs  ports.rs  state_machine.md
src/core/: mod.rs
src/core/cbor/: cbor.rs  lib.rs  mod.rs
src/core/channel/: channel_crypto.rs  mod.rs  runtime.rs
src/core/codec/: codec.rs
src/core/crypto/: directional_nonce.rs  hkdf.rs  mod.rs
src/core/protocol/: mod.rs
src/core/protocol/handshake/: mod.rs  types.rs
src/domain/: handshake.rs  mod.rs
src/domain/control/: channel.rs  mod.rs  rekey.rs  window.rs
src/domain/handshake/: accept.rs  capability.rs  errors.rs  finish.rs  hello.rs  helpers.rs  kem.rs  keys.rs  large_array_serde.rs  mod.rs  nonce.rs  params.rs  user_auth.rs
src/ports/: channel.rs  crypto.rs  handshake.rs  mod.rs  nonce_manager.rs
src/protocol/handshake/: mod.rs
src/test_support/: mod.rs  support.rs
tests/: fsm_public.rs  handshake.rs  handshake_domain.rs  sanity.rs
(+11 files in other folders)
