[package]
name = "quicshell"
version = "0.1.0"
edition = "2024"
authors = [
  "David Haukeness <david@hauken.us>"
]
description = "qsh: a QUIC-first, post-quantum secure remote shell"
license = "MIT"

[dependencies]
ciborium = "0.2.2"
quinn = "0.11.9"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
zeroize = "1.8.1"
