[package]
name = "quicshell"
version = "0.1.0"
edition = "2024"
authors = [
  "David Haukeness <david@hauken.us>"
]
description = "qsh: a QUIC-first, post-quantum secure remote shell"
license = "MIT"

[dependencies]
aead = "0.5.2"
chacha20poly1305 = { version = "0.10.1", features = ["alloc"] }
ciborium = "0.2.2"
dead = "0.1.0"
hkdf = "0.12.4"
quinn = "0.11.9"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
zeroize = { version = "1.8", features = ["zeroize_derive"] }

[dev-dependencies]
proptest = "1.7.0"

[lib]
name = "quicshell"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "qsh"
path = "src/bin/qsh.rs"

[[bin]]
name = "qshd"
path = "src/bin/qshd.rs"

